--- a/index.html
+++ b/index.html
@@ -1,21 +1,42 @@
-<html>
-<head>
-</head>
-<body>
-<input type="number" id="a">
-<input type="number" id="b">
-<button id="calc">Calc</button>
-<div id="results">
-   <div id="add"></div>
-   <div id="subtract"></div>
-   <div id="multiply"></div>
-   <div id="divide"></div>
-</div>
-
-<pre id="info"></pre>
-<div id="description"></div>
-
-<script src="/static/jquery-3.1.1.min.js"></script>
-<script src="/static/math.js?r={{reload}}"></script>
-</body>
+<!DOCTYPE html>
+  <html lang="en">
+    <head>
+      <link href="http://libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
+      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+      <script src="http://libs.baidu.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+      <script type=text/javascript>
+        $(function() {
+            $('#calculate').click(function(){
+              $.ajax({
+                url: '/addnumber',
+                data:{
+                  a: $('#a').val(),
+                  b: $('#b').val()
+                },
+                dataType: 'JSON',
+                type: 'GET',
+                success: function(data){
+                    $("#result").html(data.result);
+                }
+                });
+             });
+        });
+  </script>
+  </head>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h3 class="text-muted">addNum</h3>
+      </div>
+      <hr/>
+      <div>
+      <p>
+    <input type="text" id='a' size="5" name="a"> +
+    <input type="text" id='b' size="5" name="b"> =
+    <span id="result">?</span>
+    <p><button class="btn btn-success" id="calculate">calculate</button>
+      </form>
+      </div>
+    </div>
+  </body>
 </html>
