--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
   crossorigin="anonymous"></script>
-      https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"></script>
       <script type="text/javascript" src="script.js"></script>
         
   </head>
