--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
         result = runPyScript(datatosend);
         console.log('Got back ' + result);
     });
-
+    </script>
   </body>
 </html>
