--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <input id="submitbutton" type="submit" value="Test Send Data">
+    <span id="result">?<span>
     <!----------------------------------->
     <script type="text/javascript">
 
@@ -26,7 +27,7 @@
     $('#submitbutton').click(function(){
         datatosend = 'this is my matrix';
         result = runPyScript(datatosend);
-        console.log('Got back ' + result);
+        $('#result').html('Got back ' + result);
     });
     </script>
   </body>
