--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <input id="submitbutton" type="submit" value="Test Send Data">
-    <span id="result">?<span>
+    <span id="result">?</span>
     <!----------------------------------->
     <script type="text/javascript">
 
