--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <input id="submitbutton" type="submit" value="Test Send Data">
     <span id="result">?</span>
+    <span id="test">$</span>
     <!----------------------------------->
     <script type="text/javascript">
 
