--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <input id="submitbutton" type="submit" value="Test Send Data">
     <span id="result">?</span>
+    <span id="result1">$</span>
     <!----------------------------------->
     <script type="text/javascript">
 
