--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-
+<!DOCTYPE html>
+  <html lang="en">
+    <head>
+      <title>Flask Intro - login page</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"></script>
+      <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
+  </head>
+  <body>
+    <input id="submitbutton" type="submit" value="Test Send Data">
+    <span id="result">?</span>
+    <span id="result1">#</span>
+    <!----------------------------------->
+    <script type="text/javascript">
+    
+    $('#submitbutton').click(function(){
+        $.ajax({
+          url: 'exec.php',
+          dataType: 'text',
+          type: 'GET',
+          success: function(data) {
+            $('#result1').html('fries');
+          }
+        });
+    });
+    </script>
+  </body>
+</html>
