--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <input id="submitbutton" type="submit" value="Test Send Data">
-    <span id="result">%</span>
+    <span id="result">$</span>
     <span id="result1">#</span>
     <!----------------------------------->
     <script type="text/javascript">
